# Botmiprimerachamba.tech-bot-2

./: .claude.md  .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  README.md  app.yaml  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
backend/agents/: __init__.py  job_matcher.py
backend/scrapers/: jobspy_client.py
bot/: config.py  main.py
bot/handlers/: commands.py  jobs.py  profile.py
contexto/: CLAUDE.md  GEMINI.md  JOBSPY_API_ANALYSIS.md  PROJECT_STRUCTURE.md  idea.md  scrapersdoc.md  stack.md
database/: db.py  models.py  queries.py
documentation/: PHASE_2_DONE.md  PHASE_3_DONE.md  PHASE_4_DONE.md  PHASE_5_DONE.md  PHASE_6_DONE.md  PHASE_6_ENHANCEMENT_CSV.md  PHASE_7_BOT_REAL_USAGE_TESTING.md  PHASE_8_SUPABASE_MIGRATION.md  PHASE_9_DOCKERIZATION.md  PRE_PRODUCTION_AUDIT.md
jobspy-api/: .gitignore  .pre-commit-config.yaml  API_CHANGELOG.md  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FAQ.md  GLOSSARY.md  LICENSE.md  Makefile  PERFORMANCE_TUNING.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_GUIDELINES.md  SUPPORT.md  UPGRADE_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
jobspy-api/.github/ISSUE_TEMPLATE/: bug_report.md
jobspy-api/.github/workflows/: ci.yml  release.yml
jobspy-api/app/: __init__.py  cache.py  config.py  exceptions.py  main.py  models.py
jobspy-api/app/api/: deps.py
jobspy-api/app/api/endpoints/: example.py
jobspy-api/app/api/routes/: jobs.py
jobspy-api/app/core/: config.py  config_bridge.py  log_filters.py  logging_config.py
jobspy-api/app/db/: crud.py  database.py
jobspy-api/app/middleware/: __init__.py  api_key_auth.py  rate_limiter.py  request_logger.py
jobspy-api/app/models/: __init__.py  health_models.py  job_models.py
jobspy-api/app/routes/: api.py  health.py
jobspy-api/app/services/: background_service.py  external_service.py  job_service.py
jobspy-api/app/utils/: auth_health.py  env_debugger.py  error_handlers.py  logging_config.py  logging_docs.py  validation_helpers.py
jobspy-api/examples/: api_usage.py
jobspy-api/scripts/: check_auth.py  check_config_consistency.py  check_env.py  confirm_env.sh  debug_env_conflicts.py  debug_env_load_order.sh  docker-entrypoint.sh  increment_version.py  load_local_env.py  load_test.py  make_scripts_executable.sh  set_log_level.sh  verify_env_loading.py
jobspy-api/tests/: __init__.py  conftest.py  test_api.py
scripts/: docker-helper.sh
tests/: conftest.py
tests/pruebasApi/: HALLAZGOS_CONSOLIDADOS.md  PARAMETROS_API.md  SETUP_JOBSPY_DOCKER.md
tests/pruebasApi/scripts/: test_basico.py  test_filtros.py  test_multiples.py  test_rate_limit.py
tests/unit/fase_2/: __init__.py  test_handlers.py  test_main.py
tests/unit/fase_3/: __init__.py  test_database.py
tests/unit/fase_5/: __init__.py  test_jobspy_client.py
tests/unit/fase_6/: __init__.py  test_vacantes_handler.py
todo/: FASE_1_1.md  FASE_1_2.md  PLAN_FASES.md  README.md
